--- a/src/app.css
+++ b/src/app.css
@@ -6,7 +6,7 @@
 
 @layer components {
 	.mobile-width {
-		@apply w-full sm:max-w-[640px] md:max-w-[920px] mx-auto;
+		@apply w-full h-full sm:max-w-[640px] md:max-w-[920px] mx-auto;
 	}
 }
 
@@ -32,19 +32,20 @@ body {
 /* width */
 ::-webkit-scrollbar {
 	width: 10px;
+	display: none;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-	background: theme('colors.transparent');
+	background: transparent;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-	background: theme('colors.surface.dark');
+	background: transparent;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-	background: theme('colors.primary.DEFAULT');
+	background: transparent;
 }
